完成信息指南上传文件

--- a/infor_guide/add_infor_guide.html
+++ b/infor_guide/add_infor_guide.html
@@ -63,6 +63,15 @@
                 </div>
             </td>
         </tr>
+        <tr >
+            <td class="td_left">上传文件</td>
+            <form id="uploadForm">
+                <td>
+                    <input type="file" name="file" class="uploading" id="file_upload">
+                </td>
+            </form>
+
+        </tr>
 
     </table>
     <button class="btn_blue" ng-click="submit()">提交</button>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
